# cookiecutter-djangopackage

./: .gitignore  CHANGELOG.md  README.rst  contributors.rst  cookiecutter.json
hooks/: pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
{{cookiecutter.repo_name}}/tests/: test_processor.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: apps.py  processor.py  urls.py  views.py
